# rust-fcp-cryptoauth

./: Cargo.toml  README.md
examples/: listen.rs  receive_hello.rs  send_hello.rs  shake_hands.rs
src/: auth_failure.rs  authentication.rs  connection.rs  connection_state.rs  cryptography.rs  handshake.rs  handshake_packet.rs  hello.rs  keys.rs  lib.rs  packet.rs  passwords.rs  session.rs  wrapper.rs
tests/: packet_order.rs  test_valid_connection.rs
