[package]
name = "fcp_cryptoauth"
version = "0.4.0"
authors = ["Valentin Lorentz <progval+fcp@progval.net>"]
description = "Implementation of the Futuristic Connectivity Protocol's CryptoAuth layer (cryptographic authentication and encryption over unreliable channels)."
license = "MIT"
repository = "https://github.com/rust-fcp/rust-fcp-cryptoauth"
readme = "README.md"

[dependencies]
rust_sodium = ">=0.3.0,<0.11.0"
byteorder = "^1.0.0"
hex = ">=0.3.0,<0.5.0"
